--- a/apps/case/ios/Podfile
+++ b/apps/case/ios/Podfile
@@ -1,10 +1,20 @@
-require_relative '../node_modules/react-native/scripts/react_native_pods'
-require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
-require_relative '../node_modules/@nrwl/react-native/nx_post_install'
+require_relative '../../../node_modules/react-native/scripts/react_native_pods'
+require_relative '../../../node_modules/@react-native-community/cli-platform-ios/native_modules'
+require_relative '../../../node_modules/@nrwl/react-native/nx_post_install'
 
-platform :ios, '11.0'
+pod 'RNScreens', :path => '../../../node_modules/react-native-screens/'
+pod 'RNGestureHandler', :path => '../../../node_modules/react-native-gesture-handler/'
+pod 'react-native-safe-area-context', :path => '../../../node_modules/react-native-safe-area-context/'
+
+
+
+platform :ios, '12.0'
 
 target 'Case' do
+  # React Native Maps dependencies
+  rn_maps_path = '../node_modules/react-native-maps'
+  pod 'react-native-google-maps', :path => rn_maps_path
+  
   config = use_native_modules!
 
   use_react_native!(
