--- a/package.json
+++ b/package.json
@@ -5,12 +5,34 @@
   "scripts": {
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test"
+    "test": "nx test",
+    "watchman": "watchman watch-del '/Users/fatihakbayrak/Desktop/codeRepository/bluedot' ; watchman watch-project '/Users/fatihakbayrak/Desktop/codeRepository/bluedot'"
   },
   "private": true,
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.3.1",
+    "@react-navigation/drawer": "^6.4.1",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.2",
+    "@reduxjs/toolkit": "^1.8.1",
+    "@rneui/base": "^4.0.0-rc.3",
+    "@rneui/themed": "^4.0.0-rc.3",
+    "@types/react-native-vector-icons": "^6.4.10",
+    "@types/redux-logger": "^3.0.9",
+    "geolib": "^3.3.3",
+    "native-base": "^3.4.5",
     "react": "17.0.2",
     "react-native": "0.67.4",
+    "react-native-background-fetch": "^4.1.0",
+    "react-native-background-geolocation": "^4.6.0",
+    "react-native-gesture-handler": "^2.4.2",
+    "react-native-maps": "^0.31.1",
+    "react-native-safe-area-context": "^4.2.5",
+    "react-native-screens": "^3.13.1",
+    "react-native-vector-icons": "^9.1.0",
+    "react-redux": "^8.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
@@ -52,7 +74,7 @@
     "nx": "13.10.4",
     "prettier": "^2.5.1",
     "react-native-config": "1.4.5",
-    "react-native-svg": "12.3.0",
+    "react-native-svg": "^12.3.0",
     "react-native-svg-transformer": "1.0.0",
     "react-test-renderer": "17.0.2",
     "ts-jest": "27.0.5",
